<resources>
    <string name="app_name">File Commander</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">File Commander</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_file_commander">File Commander</string>
    <string name="menu_contact_us">Contact Us</string>
    <string name="menu_privacy_policy">Privacy Policy</string>
    <string name="menu_share">Share</string>
    <string name="menu_upgrade">Upgrade</string>

    <string name="tx_available_storage">Available Storage</string>
    <string name="tx_space_proportion">Space proportion</string>
    <string name="tx_image">Image</string>
    <string name="tx_documents">Documents</string>
    <string name="tx_audio">Audio</string>
    <string name="tx_video">Video</string>
    <string name="tx_download">Download</string>
    <string name="tx_last_update">Last update</string>

    <string name="tx_select_all">select all</string>
    <string name="tx_order">order</string>
    <string name="tx_delete">Delete</string>
    <string name="tx_ok">OK</string>

    <string name="tx_warning_title">warning</string>
    <string name="tx_warning_content">are you sure?</string>
    <string name="tx_warning_sure">sure</string>
    <string name="tx_warning_cancel">cancel</string>

    <string name="tx_native_install">Install</string>
    <string name="tx_scanner_native_install">install</string>
    <string name="tx_scanner_native_title">High School Escape 2</string>
    <string name="tx_scanner_native_des">Press the spacebar andsdfjhiwelfbjhsdbfuwefbjhb</string>
</resources>