<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>

    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_splash"
        android:paddingTop="24dp">

        <com.tqs.filemanager.ui.view.TitleBar
            android:id="@+id/title_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:titleBar_left_src="@mipmap/ic_back"
            app:titleBar_right_visible="gone"
            app:titleBar_title_text="@string/tx_documents"/>
        <ImageView
            android:id="@+id/iv_file_icon"
            android:layout_width="157dp"
            android:layout_height="118dp"
            android:layout_marginRight="16dp"
            android:src="@mipmap/ic_file_png"
            app:layout_constraintTop_toBottomOf="@id/title_bar"
            app:layout_constraintRight_toRightOf="parent"/>

        <TextView
            android:id="@+id/tv_file_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/title_bar"
            android:text="@string/tx_documents"
            android:textSize="@dimen/text_size_26"
            android:layout_marginLeft="19dp"
            app:layout_constraintTop_toTopOf="@id/iv_file_icon"
            app:layout_constraintBottom_toBottomOf="@id/iv_file_icon"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tx_select_all"
            android:layout_marginLeft="19dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_file_title"/>
        <ListView
            android:id="@+id/lv_file_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="19dp"
            android:layout_marginRight="19dp"
            android:layout_marginBottom="26dp"
            app:layout_constraintTop_toBottomOf="@id/iv_file_icon"
            app:layout_constraintBottom_toTopOf="@id/v_file_delete"/>
        <View
            android:id="@+id/v_file_delete"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginLeft="19dp"
            android:layout_marginRight="19dp"
            android:background="@drawable/bg_delete_selected"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginBottom="68dp"/>
        <TextView
            android:id="@+id/tv_file_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tx_delete"
            android:textSize="@dimen/text_size_16"
            android:textColor="@color/white"
            android:gravity="center"
            android:drawablePadding="8dp"
            android:drawableLeft="@mipmap/ic_delete"
            app:layout_constraintTop_toTopOf="@id/v_file_delete"
            app:layout_constraintBottom_toBottomOf="@id/v_file_delete"
            app:layout_constraintLeft_toLeftOf="@id/v_file_delete"
            app:layout_constraintRight_toRightOf="@id/v_file_delete"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>